# savedit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
savedit/: __init__.py  database.py  integrations.py  savedit.py
savedit/core/: __init__.py  __main__.py  database.py  plugin.py  savedit.py
savedit/notifications/: __init__.py  pushbullet.py
savedit/plugins/: dropbox.py  pocket.py  pushbullet.py  sqlite.py
savedit/plugins/databases/: json.py  sqlite.py
savedit/plugins/notifications/: pushbullet.py
savedit/plugins/services/: dropbox.py  pocket.py
savedit/services/: __init__.py  database.py  dropbox.py  pocket.py  service.py
