[tool.poetry]
name = "savedit"
version = "0.1.0"
description = "Send saved Reddit posts to other services"
authors = ["Kevin Lane <lane.kevin.a@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/klane/savedit"
keywords = ["reddit", "dropbox", "pocket", "pushbullet"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"
praw = "^6.3"
dropbox = "^9.4"
pocket = "^0.3.6"
"pushbullet.py" = "^0.11.0"
peewee = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
