[tool.poetry]
name = "savedit"
version = "0.1.0"
description = "Send saved Reddit posts to other services"
authors = ["Kevin Lane <lane.kevin.a@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/klane/savedit"
keywords = ["reddit", "dropbox", "pocket", "pushbullet"]

[tool.poetry.dependencies]
python = "^3.6"
praw = "^7.1.0"
pluggy = "^0.13.1"
dropbox = "^11.0.0"
pocket = "^0.3.6"
"pushbullet.py" = "^0.12.0"
peewee = "^3.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_third_party = ["dropbox", "peewee", "pocket", "praw", "pushbullet"]
