[tool.poetry]
name = "savedit"
version = "0.1.0"
description = "Send saved Reddit posts to other services"
authors = ["Kevin Lane <lane.kevin.a@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/klane/savedit"
keywords = ["reddit", "dropbox", "pocket", "pushbullet"]

[tool.poetry.dependencies]
python = "^3.6"
praw = "^7.1.0"
pluggy = "^0.13.1"
dropbox = {version = "^11.0.0", optional = true}
peewee = {version = "^3.14.0", optional = true}
pocket = {version = "^0.3.6", optional = true}
"pushbullet.py" = {version = "^0.12.0", optional = true}
tinydb = {version = "^4.3.0", optional = true}

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
dropbox = ["dropbox"]
json = ["tinydb"]
pocket = ["pocket"]
pushbullet = ["pushbullet.py"]
sqlite = ["peewee"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
known_third_party = ["dropbox", "peewee", "pluggy", "pocket", "praw", "pushbullet", "tinydb"]
